removed some variables not used to start tut

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "isolatedModules": true,
+    "noImplicitAny": true,
     "jsx": "react",
 
     "moduleResolution": "node",
